Fix #1215